<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged In: "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_username"/>
    </LinearLayout>
    <TextView
        android:id="@+id/newCustomerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_customer_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/newCustomerHeadingVLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/newCustomerLastTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_last_name"/>
            <TextView
                android:id="@+id/newCustomerFirstTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_first_name"/>
            <TextView
                android:id="@+id/newCustomerAddressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_address"/>
            <TextView
                android:id="@+id/newCustomerCityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_city"/>
            <TextView
                android:id="@+id/newCustomerStateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_state"/>
            <TextView
                android:id="@+id/newCustomerZipTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_zip"/>
            <TextView
                android:id="@+id/newCustomerPhoneTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_customer_phone"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/newCustomerDataVLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/newCustomerLastET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/newCustomerFirstET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/newCustomerAddressET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/newCustomerCityET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/newCustomerStateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/newCustomerZipET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/newCustomerPhoneET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/newCustomerButtonRow1HLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/newCustomerAddPictureBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_customer_add_picture_button"/>
        <Button
            android:id="@+id/newCustomerBillingInfoBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_customer_billing_info_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/newCustomerButtonRow2HLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/newCustomerSaveBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_customer_save_button"/>
        <Button
            android:id="@+id/newCustomerDiscardBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_customer_discard_button"/>
    </LinearLayout>
</LinearLayout>