<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged In: "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_username"/>
    </LinearLayout>
    <TextView
        android:id="@+id/newSessionTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_sessions_title"/>

    <TextView
        android:id="@+id/newSessionAmountPaidTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_paid_title"/>

    <LinearLayout
        android:id="@+id/newSessionDateHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/newSessionDateHeadingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_sessions_date_heading"/>
        <EditText
            android:id="@+id/newSessionDateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/newSessionCostHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/newSessionCostHeadingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_sessions_cost_heading"/>
        <EditText
            android:id="@+id/newSessionCostET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/newSessionScheduleBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_sessions_schedule_button"/>
</LinearLayout>