<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged In: "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_username"/>
    </LinearLayout>
    <TextView
        android:id="@+id/completeSessionTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_session_title"/>

    <TextView
        android:id="@+id/clientNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/sessionDateHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sessionDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_date"/>

        <TextView
            android:id="@+id/dateOfSessionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/signHereInstructionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_here_instruction"/>

    <Button
        android:id="@+id/finishSigningBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_signing"/>
</LinearLayout>