<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged In: "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_username"/>
    </LinearLayout>

    <TextView
        android:id="@+id/customerListTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_list_title"/>

    <GridLayout
        android:id="@+id/customerListGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4">
        <TextView
            android:text="Customer Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/viewSessionsBT"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/view_sessions_button"/>
        <Button
            android:id="@+id/editInfoBT"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_info_button"/>
    </GridLayout>



    <Button
        android:id="@+id/addNewCustomerBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_customer_button"/>
</LinearLayout>