<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <fragment android:name="com.bignerdranch.android.trainernet.ButtonsFragment"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged In: "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_username"/>
    </LinearLayout>
    <TextView
        android:id="@+id/customerSessionsTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_sessions_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/customerSessionsDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_sessions_date_heading"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/customerSessionsCompleteTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_sessions_comp_heading"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/customerSessionsButtonsHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/scheduleSessionBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_session_button"/>
        <Button
            android:id="@+id/updateBillingBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_billing_button"/>
    </LinearLayout>
</LinearLayout>