<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged In: "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_username"/>
    </LinearLayout>
    <TextView
        android:id="@+id/billingInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Billing Information/Submit Payment"/>

    <LinearLayout
        android:id="@+id/cardNumberHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cardNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Card Number"/>

        <EditText
            android:id="@+id/cardNumberET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expirationDateHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expiration Date"/>

        <EditText
            android:id="@+id/expDateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/paymentSubmitBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_billing_button"/>

    <LinearLayout
        android:id="@+id/paymentAmountHLL"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/paymentAmountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_amount_TV"/>

        <EditText
            android:id="@+id/paymentAmountET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/todaysDateHLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/todaysDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todays_date_TV"/>

        <EditText
            android:id="@+id/todaysDateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/receiptSentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_sent_TV"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <RadioButton
                android:id="@+id/printerRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printer_RB"/>
             <RadioButton
                 android:id="@+id/emailRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/email_RB"/>

    </RadioGroup>

    <Button
        android:id="@+id/submitPaymentBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_payment_BT"/>
</LinearLayout>